# jirafs

./: .env.example  .gitignore  Cargo.toml  Justfile  README.md  config.example.toml  migrate-fs-jira-to-jirafs.sh
.github/workflows/: ci.yml
apps/desktop/: biome.json  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
apps/desktop/src/: App.tsx  index.css  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: errors.rs  lib.rs  main.rs  service_linux.rs  service_macos.rs  sync_meta.rs
apps/desktop/src/components/: actions-card.tsx  full-resync-dialog.tsx  logs-card.tsx  path-card.tsx  status-card.tsx  workspaces-card.tsx
apps/desktop/src/hooks/: use-app-status.ts
apps/desktop/src/lib/: tauri.ts
deploy/launchd/: com.jirafs.mount.plist.tmpl
deploy/systemd/: jirafs.service.tmpl
docs/: ticket-format-v2.md
src/: cache.rs  config.rs  fs.rs  jira.rs  lib.rs  logging.rs  main.rs  metrics.rs  render.rs  warmup.rs
src/cache/: persistent.rs
thoughts/shared/plans/: 2026-02-21-fs-jira-rust-bootstrap.md  2026-02-22-rust-best-practices-remediation.md  2026-02-23-add-macos-support.md  2026-02-23-cross-platform-service-autostart.md  2026-02-23-desktop-ui-service-restart-logs-tray-workspace-jql.md  2026-02-23-justfile-build-run-install.md  2026-02-23-rename-fs-jira-to-jirafs-hard-cutover.md  2026-02-23-tauri-desktop-ui-for-fs-jira.md  2026-02-23-workspaces-instead-of-projects-no-index-jsonl.md  2026-02-23-xdg-config-hard-cutover.md
thoughts/shared/research/: 2026-02-22-ticket-cache-pre-warming.md
