[package]
name = "fs-jira"
version = "0.1.0"
edition = "2021"

[dependencies]
fuser = "0.17"
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
regex = "1"
toml = "0.8"

[dev-dependencies]
httpmock = "0.7"
tiny_http = "0.12"
